--- a/frontend/src/app/components/views/public/home/home.component.html
+++ b/frontend/src/app/components/views/public/home/home.component.html
@@ -1,14 +1,49 @@
-<div id="home" class="mt-10">
-  <div class="container">
-    <div class="row" id="rowHome">
-      <div class="col-lg-6 leftAlign" id="homeLeft">
-        <h1>SIMPLIFICAMOS LO MÁS COMPLEJO</h1>
-        <p>Compra y vende al toque, sin preocupaciones.</p>
-        <button class="primaryButton">Comenzar</button>
+<div id="product-landing">
+  <div id="nav">
+    <div id="logo">
+      <!-- <img src="https://thehelpfultipper.github.io/build_figma_design/imgs/habitual-branding.png" alt="Habitual branding logo."> -->
+    </div>
+  </div>
+  <div id="hero">
+    <div id="hero-intro">
+      <div id="hero-text">
+        <h1>Compra y vende lo que quieras, cuando quieras.</h1>
+        <p>Aliquam rhoncus pretium dolor volutpat lectus odio non tellus neque. Aliquet et purus nibh bibendum integer etiam in enim nisi.</p>
       </div>
-      <div class="col-lg-6 leftAlign" id="mobileHome">
-        <img src="../../../assets/svg/delivery.svg" alt="" srcset="">
+      <div id="hero-action-btn">
+        <div id="apple" class="hero-btn">
+          <a href="">
+            <img src="https://thehelpfultipper.github.io/build_figma_design/imgs/App-Store-Web.png" alt="App Store Web button.">
+          </a>
+        </div>
+        <div id="google" class="hero-btn"><a href="">
+            <img src="https://thehelpfultipper.github.io/build_figma_design/imgs/Google-Play-Web.png" alt="Google Play button.">
+          </a>
+
+        </div>
+      </div>
+    </div>
+    <div id="hero-visual">
+      <div id="hero-img">
+        <img src="https://thehelpfultipper.github.io/build_figma_design/imgs/iPhone-15.png" alt="iPhone 15 display.">
       </div>
     </div>
   </div>
+  <!-- <div id="main">
+    <div class="main-img">
+      <img src="https://thehelpfultipper.github.io/build_figma_design/imgs/Cart.png" alt="Cart visual.">
+    </div>
+    <div class="main-img">
+      <img src="https://thehelpfultipper.github.io/build_figma_design/imgs/Orders.png" alt="Orders visual.">
+    </div>
+    <div class="main-img">
+      <img src="https://thehelpfultipper.github.io/build_figma_design/imgs/Profile.png" alt="Profile visual.">
+    </div>
+    <div class="main-img">
+      <img src="https://thehelpfultipper.github.io/build_figma_design/imgs/Product.png" alt="Product visual.">
+    </div>
+    <div class="main-img">
+      <img src="https://thehelpfultipper.github.io/build_figma_design/imgs/Home.png" alt="Home visual.">
+    </div>
+  </div> -->
 </div>
