--- a/frontend/src/app/components/graphics/navbar/navbar.component.html
+++ b/frontend/src/app/components/graphics/navbar/navbar.component.html
@@ -32,7 +32,7 @@
             <li>
               <hr class="dropdown-divider">
             </li>
-            <li><a class="dropdown-item" href="#">Logout</a></li>
+            <li (click)="logout()"><a class="dropdown-item" href="#">Logout</a></li>
           </ul>
         </li>
       </ul>
