--- a/frontend/src/app/components/views/private/userProfile/userProfile.component.html
+++ b/frontend/src/app/components/views/private/userProfile/userProfile.component.html
@@ -85,15 +85,16 @@
         <th>Precio</th>
         <th>Ventas</th>
       </tr>
-      <tr *ngFor="let producto of data.stockGraphData" routerLink="/product-details/{{data.bestSeller.uid}}">
-        <td>{{ producto.title }}</td>
-        <td>{{ producto.stock }}</td>
-        <td>{{ producto.price }}</td>
-        <td>{{ data.totalSalesPerProduct[producto.uid] || 0}}</td>
+      <tr *ngFor="let oferta of data.offers" routerLink="/product-details/{{data.bestSeller.uid}}">
+        <!-- <td>{{ oferta.title }}</td>
+        <td>{{ oferta.stock }}</td>
+        <td>{{ oferta.price }}</td>
+        <td>{{ data.totalSalesPerProduct[oferta.uid] || 0}}</td> -->
       </tr>
     </table>
-    <form action="" style="display: flex; align-items: center;">
-      <input type="number" style="width: 30%; height: 30px;">
+    <form [formGroup]="offerForm" (ngSubmit)="onSubmit(); offerForm.reset();" method="post" style="display: flex; align-items: center;">
+      <input type="text" style="width: 30%; height: 30px;" id="offerName" name="offerName" formControlName="offerPercentage" [(ngModel)]="this.offer.offerName">
+      <input type="number" style="width: 30%; height: 30px;" id="offerPercentage" name="offerPercentage" formControlName="offerPercentage" [(ngModel)]="this.offer.offerPercentage">
       <input type="submit" value="Crear Oferta">
     </form>
 
@@ -124,7 +125,7 @@
         <th>Precio</th>
         <th>Ventas</th>
       </tr>
-      <tr *ngFor="let producto of data.stockGraphData" routerLink="/product-details/{{data.bestSeller.uid}}">
+      <tr *ngFor="let producto of data.stockGraphData" routerLink="/product-details/{{producto.uid}}">
         <td>{{ producto.title }}</td>
         <td>{{ producto.stock }}</td>
         <td>{{ producto.price }}</td>
