--- a/frontend/src/app/components/views/public/marketplace/marketplace.component.html
+++ b/frontend/src/app/components/views/public/marketplace/marketplace.component.html
@@ -19,7 +19,8 @@
               <div class="thumb-content">
                 <h4 routerLink="/product-details/{{product.uid}}">{{product.title}}</h4>
                 <starRatingComponent [stars]="product.stars" routerLink="/product-details/{{product.uid}}"></starRatingComponent>
-                <p class="item-price" routerLink="/product-details/{{product.uid}}"><a>{{product.price}}€</a></p>
+                <p *ngIf="product.offerPrice === 0" class="item-price" routerLink="/product-details/{{product.uid}}"><a>{{product.price}}€</a></p>
+                <p *ngIf="product.offerPrice > 0" class="item-price" routerLink="/product-details/{{product.uid}}"><a>{{product.offerPrice}}€</a></p>
                 <a (click)="addCarrito(product)" class="btn btn-primary">Add to Cart</a>
               </div>						
             </div>
