--- a/frontend/src/app/components/graphics/uploadFIles/uploadFiles.component.html
+++ b/frontend/src/app/components/graphics/uploadFIles/uploadFiles.component.html
@@ -7,7 +7,7 @@
 
   <div class="col-4">
     <button class="btn btn-success btn-sm" [disabled]="!selectedFiles" (click)="upload()">
-      Upload
+      Subir Imagen
     </button>
   </div>
 </div>
